--- a/components/operator/templates/component/deployment.yaml
+++ b/components/operator/templates/component/deployment.yaml
@@ -63,7 +63,7 @@ spec:
                   fieldPath: status.podIP
           envFrom:
             - configMapRef:
-                name: {{ name }}-env
+                name: {{ .Platform.Name }}-env
           ports:
             - name: health
               containerPort: 1111
