--- a/components/operator/templates/instance/validating-webhook.yaml
+++ b/components/operator/templates/instance/validating-webhook.yaml
@@ -9,7 +9,7 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: {{ name }}-operator
+  name: {{ .Instance.Name }}-operator
   namespace: {{ namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
@@ -28,7 +28,7 @@ webhooks:
     clientConfig:
       caBundle: {{ .Values.caBundle }}
       service:
-        name: {{ name }}-operator
+        name: {{ .Instance.Name }}-operator
         namespace: {{ namespace }}
         path: /immutable/validate
     rules:
