--- a/components/operator/templates/nats/statefulset.yaml
+++ b/components/operator/templates/nats/statefulset.yaml
@@ -47,7 +47,7 @@ spec:
                   fieldPath: status.podIP
           envFrom:
             - configMapRef:
-                name: {{ name }}-env
+                name: {{ .Platform.Name }}-env
           ports:
             - name: client
               containerPort: 4222
