--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -29,6 +29,9 @@ spec:
     - jsonPath: .spec.appName
       name: App
       type: string
+    - jsonPath: .spec.Version
+      name: Version
+      type: string
     - jsonPath: .status.conditions[?(@.type=='Available')].status
       name: Available
       type: string
@@ -37,14 +40,6 @@ spec:
       type: string
     - jsonPath: .status.conditions[?(@.type=='Progressing')].status
       name: Progressing
-      type: string
-    - jsonPath: .details.title
-      name: Title
-      priority: 1
-      type: string
-    - jsonPath: .details.description
-      name: Description
-      priority: 1
       type: string
     name: v1alpha1
     schema:
