--- a/api/crds/kubefox.xigxog.io_releasemanifests.yaml
+++ b/api/crds/kubefox.xigxog.io_releasemanifests.yaml
@@ -26,28 +26,14 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .spec.id
+      name: Id
+      type: string
     - jsonPath: .spec.virtualEnvironment.name
       name: Environment
       type: string
     - jsonPath: .spec.virtualEnvironment.environment
       name: VirtualEnvironment
-      type: string
-    - jsonPath: .status.conditions[?(@.type=='Available')].status
-      name: Available
-      type: string
-    - jsonPath: .status.conditions[?(@.type=='Available')].reason
-      name: Reason
-      type: string
-    - jsonPath: .status.conditions[?(@.type=='Progressing')].status
-      name: Progressing
-      type: string
-    - jsonPath: .details.title
-      name: Title
-      priority: 1
-      type: string
-    - jsonPath: .details.description
-      name: Description
-      priority: 1
       type: string
     name: v1alpha1
     schema:
@@ -270,15 +256,24 @@ spec:
                           - commitTime
                           - components
                           type: object
+                        uid:
+                          description: UID is a type that holds unique ID values,
+                            including UUIDs.  Because we don't ONLY use UUIDs, this
+                            is an alias to string.  Being a type captures intent and
+                            helps make sure that UIDs and names do not get conflated.
+                          type: string
                       required:
                       - name
                       - resourceVersion
                       - spec
+                      - uid
                       type: object
                     version:
+                      minLength: 1
                       type: string
                   required:
                   - appDeployment
+                  - version
                   type: object
                 minProperties: 1
                 type: object
@@ -296,128 +291,22 @@ spec:
                   resourceVersion:
                     minLength: 1
                     type: string
+                  uid:
+                    description: UID is a type that holds unique ID values, including
+                      UUIDs.  Because we don't ONLY use UUIDs, this is an alias to
+                      string.  Being a type captures intent and helps make sure that
+                      UIDs and names do not get conflated.
+                    type: string
                 required:
                 - environment
                 - name
                 - resourceVersion
+                - uid
                 type: object
             required:
             - apps
             - id
             - virtualEnvironment
-            type: object
-          status:
-            properties:
-              conditions:
-                items:
-                  description: "Condition contains details for one aspect of the current
-                    state of this API Resource. --- This struct is intended for direct
-                    use as an array at the field path .status.conditions.  For example,
-                    \n type FooStatus struct{ // Represents the observations of a
-                    foo's current state. // Known .status.conditions.type are: \"Available\",
-                    \"Progressing\", and \"Degraded\" // +patchMergeKey=type // +patchStrategy=merge
-                    // +listType=map // +listMapKey=type Conditions []metav1.Condition
-                    `json:\"conditions,omitempty\" patchStrategy:\"merge\" patchMergeKey:\"type\"
-                    protobuf:\"bytes,1,rep,name=conditions\"` \n // other fields }"
-                  properties:
-                    lastTransitionTime:
-                      description: lastTransitionTime is the last time the condition
-                        transitioned from one status to another. This should be when
-                        the underlying condition changed.  If that is not known, then
-                        using the time when the API field changed is acceptable.
-                      format: date-time
-                      type: string
-                    message:
-                      description: message is a human readable message indicating
-                        details about the transition. This may be an empty string.
-                      maxLength: 32768
-                      type: string
-                    observedGeneration:
-                      description: observedGeneration represents the .metadata.generation
-                        that the condition was set based upon. For instance, if .metadata.generation
-                        is currently 12, but the .status.conditions[x].observedGeneration
-                        is 9, the condition is out of date with respect to the current
-                        state of the instance.
-                      format: int64
-                      minimum: 0
-                      type: integer
-                    reason:
-                      description: reason contains a programmatic identifier indicating
-                        the reason for the condition's last transition. Producers
-                        of specific condition types may define expected values and
-                        meanings for this field, and whether the values are considered
-                        a guaranteed API. The value should be a CamelCase string.
-                        This field may not be empty.
-                      maxLength: 1024
-                      minLength: 1
-                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
-                      type: string
-                    status:
-                      description: status of the condition, one of True, False, Unknown.
-                      enum:
-                      - "True"
-                      - "False"
-                      - Unknown
-                      type: string
-                    type:
-                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
-                        --- Many .condition.type values are consistent across resources
-                        like Available, but because arbitrary conditions can be useful
-                        (see .node.status.conditions), the ability to deconflict is
-                        important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
-                      maxLength: 316
-                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
-                      type: string
-                  required:
-                  - lastTransitionTime
-                  - message
-                  - reason
-                  - status
-                  - type
-                  type: object
-                type: array
-                x-kubernetes-list-map-keys:
-                - type
-                x-kubernetes-list-type: map
-              problems:
-                items:
-                  properties:
-                    causes:
-                      description: Resources and attributes causing problem.
-                      items:
-                        properties:
-                          kind:
-                            type: string
-                          name:
-                            type: string
-                          observedGeneration:
-                            description: ObservedGeneration represents the .metadata.generation
-                              of the ProblemSource that the problem was generated
-                              from. For instance, if the ProblemSource .metadata.generation
-                              is currently 12, but the observedGeneration is 9, the
-                              problem is out of date with respect to the current state
-                              of the instance.
-                            format: int64
-                            type: integer
-                          path:
-                            description: Path of source object attribute causing problem.
-                            type: string
-                          value:
-                            description: Value causing problem. Pointer is used to
-                              distinguish between not set and empty string.
-                            type: string
-                        required:
-                        - kind
-                        type: object
-                      type: array
-                    message:
-                      type: string
-                    type:
-                      type: string
-                  required:
-                  - type
-                  type: object
-                type: array
             type: object
         required:
         - data
