--- a/components/operator/templates/broker/daemonset.yaml
+++ b/components/operator/templates/broker/daemonset.yaml
@@ -39,7 +39,7 @@ spec:
             - -platform={{ .Platform.Name }}
             - -namespace={{ namespace }}
             - -grpc-addr=$(KUBEFOX_COMPONENT_IP):6060
-            - -nats-addr={{ .Platform.Name }}-nats.{{ .Platform.Namespace }}
+            - -nats-addr=nats.{{ .Platform.Namespace }}
             - -telemetry-addr=false
             - -health-addr=0.0.0.0:1111
             - -max-event-size={{ .Values.maxEventSize }}
