--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -29,7 +29,7 @@ spec:
     - jsonPath: .spec.appName
       name: App
       type: string
-    - jsonPath: .spec.Version
+    - jsonPath: .spec.version
       name: Version
       type: string
     - jsonPath: .status.conditions[?(@.type=='Available')].status
