--- a/api/crds/kubefox.xigxog.io_virtualenvironments.yaml
+++ b/api/crds/kubefox.xigxog.io_virtualenvironments.yaml
@@ -26,6 +26,9 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .spec.environment
+      name: Environment
+      type: string
     - jsonPath: .status.activeRelease.releaseManifest
       name: Manifest
       type: string
@@ -117,15 +120,19 @@ spec:
                       type: object
                     minProperties: 1
                     type: object
-                  id:
-                    minLength: 1
-                    type: string
                 required:
                 - apps
-                - id
                 type: object
               releasePolicy:
                 properties:
+                  activationDeadlineSeconds:
+                    description: If the pending Release cannot be activated before
+                      the activation deadline it will be considered failed and the
+                      Release will automatically rolled back to the current active
+                      Release. Pointer is used to distinguish between not set and
+                      false.
+                    minimum: 3
+                    type: integer
                   historyLimits:
                     properties:
                       ageDays:
@@ -144,19 +151,11 @@ spec:
                         minimum: 0
                         type: integer
                     type: object
-                  pendingDeadlineSeconds:
-                    description: If the pending Request cannot be activated before
-                      the deadline it will be considered failed. If the Release becomes
-                      available for activation after the deadline has been exceeded,
-                      it will not be activated. Pointer is used to distinguish between
-                      not set and false.
-                    minimum: 3
-                    type: integer
-                  versionRequired:
-                    description: If true '.spec.release.appDeployment.version' is
-                      required. Pointer is used to distinguish between not set and
-                      false.
-                    type: boolean
+                  type:
+                    enum:
+                    - Stable
+                    - Testing
+                    type: string
                 type: object
             required:
             - environment
