--- a/examples/go/hello-world/kubefox/hack/environments/qa.yaml
+++ b/examples/go/hello-world/kubefox/hack/environments/qa.yaml
@@ -4,7 +4,7 @@ metadata:
   name: qa
 spec:
   releasePolicy:
-    versionRequired: false
+    type: Testing
 data:
   vars:
     who: World
@@ -16,6 +16,3 @@ metadata:
   name: qa
 spec:
   environment: qa
-data:
-  secrets:
-    this: thisisatest
