--- a/api/crds/kubefox.xigxog.io_releasemanifests.yaml
+++ b/api/crds/kubefox.xigxog.io_releasemanifests.yaml
@@ -89,13 +89,70 @@ spec:
             type: object
           spec:
             properties:
+              adapters:
+                properties:
+                  http:
+                    items:
+                      properties:
+                        generation:
+                          format: int64
+                          type: integer
+                        name:
+                          type: string
+                        resourceVersion:
+                          minLength: 1
+                          type: string
+                        spec:
+                          properties:
+                            followRedirects:
+                              default: Never
+                              enum:
+                              - Never
+                              - Always
+                              - SameHost
+                              type: string
+                            headers:
+                              additionalProperties:
+                                type: string
+                              type: object
+                            insecureSkipVerify:
+                              default: false
+                              description: InsecureSkipVerify controls whether the
+                                Adapter verifies the server's certificate chain and
+                                host name. If InsecureSkipVerify is true, any certificate
+                                presented by the server and any host name in that
+                                certificate is accepted. In this mode, TLS is susceptible
+                                to machine-in-the-middle attacks.
+                              type: boolean
+                            url:
+                              format: uri
+                              type: string
+                          required:
+                          - url
+                          type: object
+                        uid:
+                          description: UID is a type that holds unique ID values,
+                            including UUIDs.  Because we don't ONLY use UUIDs, this
+                            is an alias to string.  Being a type captures intent and
+                            helps make sure that UIDs and names do not get conflated.
+                          type: string
+                      required:
+                      - generation
+                      - resourceVersion
+                      - spec
+                      - uid
+                      type: object
+                    type: array
+                type: object
               apps:
                 additionalProperties:
                   properties:
                     appDeployment:
                       properties:
+                        generation:
+                          format: int64
+                          type: integer
                         name:
-                          minLength: 1
                           type: string
                         resourceVersion:
                           minLength: 1
@@ -104,46 +161,6 @@ spec:
                           description: AppDeploymentSpec defines the desired state
                             of AppDeployment
                           properties:
-                            adapters:
-                              description: Specs of all Adapters defined as dependencies
-                                by the Components. This a read-only field and is set
-                                by the KubeFox Operator when a versioned AppDeployment
-                                is created.
-                              properties:
-                                http:
-                                  additionalProperties:
-                                    properties:
-                                      followRedirects:
-                                        default: Never
-                                        enum:
-                                        - Never
-                                        - Always
-                                        - SameHost
-                                        type: string
-                                      headers:
-                                        additionalProperties:
-                                          type: string
-                                        type: object
-                                      insecureSkipVerify:
-                                        default: false
-                                        description: InsecureSkipVerify controls whether
-                                          the Adapter verifies the server's certificate
-                                          chain and host name. If InsecureSkipVerify
-                                          is true, any certificate presented by the
-                                          server and any host name in that certificate
-                                          is accepted. In this mode, TLS is susceptible
-                                          to machine-in-the-middle attacks.
-                                        type: boolean
-                                      url:
-                                        format: uri
-                                        type: string
-                                    required:
-                                    - url
-                                    type: object
-                                  type: object
-                              required:
-                              - http
-                              type: object
                             appName:
                               type: string
                             branch:
@@ -263,7 +280,7 @@ spec:
                             helps make sure that UIDs and names do not get conflated.
                           type: string
                       required:
-                      - name
+                      - generation
                       - resourceVersion
                       - spec
                       - uid
@@ -279,8 +296,10 @@ spec:
                 type: object
               environment:
                 properties:
+                  generation:
+                    format: int64
+                    type: integer
                   name:
-                    minLength: 1
                     type: string
                   resourceVersion:
                     minLength: 1
@@ -292,7 +311,7 @@ spec:
                       UIDs and names do not get conflated.
                     type: string
                 required:
-                - name
+                - generation
                 - resourceVersion
                 - uid
                 type: object
@@ -301,8 +320,10 @@ spec:
                 type: string
               virtualEnvironment:
                 properties:
+                  generation:
+                    format: int64
+                    type: integer
                   name:
-                    minLength: 1
                     type: string
                   resourceVersion:
                     minLength: 1
@@ -314,7 +335,7 @@ spec:
                       UIDs and names do not get conflated.
                     type: string
                 required:
-                - name
+                - generation
                 - resourceVersion
                 - uid
                 type: object
