--- a/examples/go/hello-world/kubefox/app.yaml
+++ b/examples/go/hello-world/kubefox/app.yaml
@@ -1,3 +1,3 @@
 name: hello-world
 title: Hello World
-description: A simple app demonstrating the use of KubeFox.
+description: A simple App demonstrating the use of KubeFox.
