adding app back to component fqn

--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -21,7 +21,9 @@ spec:
     plural: appdeployments
     shortNames:
     - appdep
+    - appdeps
     - app
+    - apps
     singular: appdeployment
   scope: Namespaced
   versions:
