--- a/api/crds/kubefox.xigxog.io_httpadapters.yaml
+++ b/api/crds/kubefox.xigxog.io_httpadapters.yaml
@@ -21,6 +21,7 @@ spec:
     plural: httpadapters
     shortNames:
     - http
+    - https
     singular: httpadapter
   scope: Namespaced
   versions:
