--- a/api/crds/kubefox.xigxog.io_virtualenvironments.yaml
+++ b/api/crds/kubefox.xigxog.io_virtualenvironments.yaml
@@ -21,7 +21,9 @@ spec:
     plural: virtualenvironments
     shortNames:
     - virtenv
+    - virtenvs
     - ve
+    - ves
     singular: virtualenvironment
   scope: Namespaced
   versions:
