--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -26,6 +26,6 @@ tls {
 
 authorization {
     users = [
-        {user: "broker.{{ .Platform.Namespace }}"}
+        {user: "{{ .Platform.Name }}-broker.{{ .Platform.Namespace }}"}
     ]
 }
