--- a/components/operator/templates/broker/service-headless.yaml
+++ b/components/operator/templates/broker/service-headless.yaml
@@ -9,8 +9,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Component.Name }}-headless
-  namespace: {{ namespace }}
+  name: {{ name }}-headless
+  namespace: {{ .Platform.Namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
   annotations:
