--- a/components/operator/templates/instance/mutating-webhook.yaml
+++ b/components/operator/templates/instance/mutating-webhook.yaml
@@ -10,7 +10,7 @@ apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: {{ .Instance.Name }}-operator
-  namespace: {{ namespace }}
+  namespace: {{ .Instance.Namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
   annotations:
@@ -29,7 +29,7 @@ webhooks:
       caBundle: {{ .Values.caBundle }}
       service:
         name: {{ .Instance.Name }}-operator
-        namespace: {{ namespace }}
+        namespace: {{ .Instance.Namespace }}
         path: /index/mutate
     rules:
       - apiGroups:
@@ -53,7 +53,7 @@ webhooks:
       caBundle: {{ .Values.caBundle }}
       service:
         name: {{ .Instance.Name }}-operator
-        namespace: {{ namespace }}
+        namespace: {{ .Instance.Namespace }}
         path: /v1alpha1/platforms/mutate
     rules:
       - apiGroups:
@@ -75,7 +75,7 @@ webhooks:
       caBundle: {{ .Values.caBundle }}
       service:
         name: {{ .Instance.Name }}-operator
-        namespace: {{ namespace }}
+        namespace: {{ .Instance.Namespace }}
         path: /secrets/mutate
     rules:
       - apiGroups:
