--- a/components/operator/templates/nats/configmap.yaml
+++ b/components/operator/templates/nats/configmap.yaml
@@ -9,8 +9,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ componentFullName }}-config
-  namespace: {{ namespace }}
+  name: {{ name }}-config
+  namespace: {{ .Platform.Namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
   annotations:
