--- a/components/operator/templates/platform/configmap-root-ca.yaml
+++ b/components/operator/templates/platform/configmap-root-ca.yaml
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Instance.Name }}-root-ca
-  namespace: {{ namespace }}
+  namespace: {{ .Platform.Namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
   annotations:
