--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -93,9 +93,6 @@ spec:
               components:
                 additionalProperties:
                   properties:
-                    commit:
-                      pattern: ^[a-z0-9]{40}$
-                      type: string
                     defaultHandler:
                       type: boolean
                     dependencies:
@@ -128,6 +125,9 @@ spec:
                         - required
                         type: object
                       type: object
+                    hash:
+                      pattern: ^[a-z0-9]{32}$
+                      type: string
                     image:
                       type: string
                     routes:
@@ -168,7 +168,7 @@ spec:
                       - HTTPAdapter
                       type: string
                   required:
-                  - commit
+                  - hash
                   - type
                   type: object
                 minProperties: 1
