--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -91,6 +91,7 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
+#          format: !!python/name:mermaid2.fence_mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tasklist:
       custom_checkbox: true
