--- a/api/crds/kubefox.xigxog.io_platforms.yaml
+++ b/api/crds/kubefox.xigxog.io_platforms.yaml
@@ -5170,7 +5170,7 @@ spec:
               components:
                 items:
                   properties:
-                    commit:
+                    hash:
                       type: string
                     name:
                       type: string
