--- a/components/operator/templates/component/deployment.yaml
+++ b/components/operator/templates/component/deployment.yaml
@@ -49,7 +49,7 @@ spec:
             - -platform={{ .Platform.Name }}
             - -app={{ .Component.App }}
             - -name={{ .Component.Name }}
-            - -commit={{ .Component.Commit }}
+            - -hash={{ .Component.Hash }}
             - -broker-addr=$(KUBEFOX_HOST_IP):6060
             - -health-addr=0.0.0.0:1111
             - -max-event-size={{ .Values.maxEventSize }}
