--- a/docs/diagrams/dynamic_routing/joe_ve_yaml.yml
+++ b/docs/diagrams/dynamic_routing/joe_ve_yaml.yml
@@ -1,3 +1,11 @@
+# Copyright 2024 XigXog
+#
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at https://mozilla.org/MPL/2.0/.
+#
+# SPDX-License-Identifier: MPL-2.0
+
 ---
 apiVersion: kubefox.xigxog.io/v1alpha1
 kind: Environment
